# amazon-textract-response-parser

./: .gitignore  pyproject.toml
src-python/: pyproject.toml
src-python/trp/: __init__.py  trp2.py  trp2_analyzeid.py  trp2_expense.py  trp2_lending.py
