[tool.poetry]
name = "streamline-trp"
version = "0.1.2"
description = ""
authors = ["Doug Qian <douglas@spirals.so>"]
readme = "README.md"
packages = [{include = "src-python"}]

[tool.poetry.dependencies]
python = "^3.8"
logging = "^0.4.9.6"
marshmallow = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
